# mipt-devops-hw5

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: train.py
